ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cloudtunes.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radio-fe-app
                port:
                  number: 80
